@@ -23,7 +23,7 @@ import org.junit.Test
 import org.junit.Assert._
 import collection.JavaConverters._
 import org.scalatest.Assertions
-import org.neo4j.graphdb.{NotFoundException, Relationship, Node}
+import org.neo4j.graphdb.{Path, NotFoundException, Relationship, Node}
 import java.util.HashMap
 
 class MutatingIntegrationTests extends ExecutionEngineHelper with Assertions with StatisticsChecker {
@@ -447,6 +447,26 @@ return distinct center""")
     val result = parseAndExecute("start a=node(1) delete a foreach( x in [1] : delete a)")
 
     assertStats(result, deletedNodes = 1)
+  }
+
+  @Test
+  def created_paths_honor_directions() {
+    val a = createNode()
+    val b = createNode()
+    val result = parseAndExecute("start a=node(1), b=node(2) create p = a<-[:X]-b return p").toList.head("p").asInstanceOf[Path]
+
+    assert(result.startNode() === a)
+    assert(result.endNode() === b)
+  }
+
+  @Test
+  def related_paths_honor_directions() {
+    val a = createNode()
+    val b = createNode()
+    val result = parseAndExecute("start a=node(1), b=node(2) relate p = a<-[:X]-b return p").toList.head("p").asInstanceOf[Path]
+
+    assert(result.startNode() === a)
+    assert(result.endNode() === b)
   }
 }
 
